--- a/src/__automatic-index.html
+++ b/src/__automatic-index.html
@@ -349,19 +349,31 @@
 																		<div class="is-open">
 																			<h4>Оптово-розничная торговля</h4>
 																			<div class="cols">
-																				<div class="col">г. Владивосток, ул.Олега Кошевого, 8Б</div>
 																				<div class="col">
-																					<ul>
-																						<li><a href="tel: 423 290-72-58">(423) 290-72-58</a></li>
-																						<li><a href="tel: 2-911-924">2-911-924</a></li>
-																					</ul>
+																					@@include("includes-json/svg/icon-benefits-01.svg")
+																					<div class="col__title">Адрес</div>
+																					<div class="col__content">
+																						г. Владивосток, ул.Олега Кошевого, 8Б
+																					</div>
 																				</div>
 																				<div class="col">
-																					<ul>
-																						<li>Пн-Пт: 09:00–18:00</li>
-																						<li>Сб: 09:00–15:00</li>
-																						<li>Вс: выходной</li>
-																					</ul>
+																					@@include("includes-json/svg/icon-benefits-02.svg")
+																					<div class="col__title">Режим работы, Телефоны</div>
+																					<div class="col__content">
+																						<small>Пн-Пт: 09:00–18:00, Сб: 09:00–15:00, Вс: выходной</small>
+																						<ul>
+																							<li><a href="tel: 423 290-72-58">(423) 290-72-58</a> - многоканальный</li>
+																						</ul>
+																					</div>
+																				</div>
+																				<div class="col">
+																					@@include("includes-json/svg/icon-benefits-03.svg")
+																					<div class="col__title">Электронная почта</div>
+																					<div class="col__content">
+																						<ul>
+																							<li><a href="mailto:office@ema-dv.ru">office@ema-dv.ru</a></li>
+																						</ul>
+																					</div>
 																				</div>
 																			</div>
 																		</div>
@@ -369,21 +381,32 @@
 																		<div>
 																			<h4>Оптово-розничная торговля</h4>
 																			<div class="cols">
-																				<div class="col">г.Владивосток, ул. Бородинская, 20, 2 этаж.</div>
 																				<div class="col">
-																					<ul>
-																						<li>
-																							<a href="tel:(423) 230-20-13">(423) 230-20-13</a></li>
-																						<li>
-																							<a href="tel:(423) 224-44-30">(423) 224-44-30</a></li>
-																						<li><a href="mailto:office@ema-dv.ru">office@ema-dv.ru</a></li>
-																					</ul>
+																					@@include("includes-json/svg/icon-benefits-01.svg")
+																					<div class="col__title">Адрес</div>
+																					<div class="col__content">
+																						г.Владивосток, ул. Бородинская, 20, 2 этаж.
+																					</div>
 																				</div>
 																				<div class="col">
-																					<ul>
-																						<li>Пн-Пт: 09:00–18:00</li>
-																						<li>Сб: 09:00–15:00</li>
-																					</ul>
+																					@@include("includes-json/svg/icon-benefits-02.svg")
+																					<div class="col__title">Режим работы, Телефоны</div>
+																					<div class="col__content">
+																						<small>Пн-Пт: 09:00–18:00, Сб: 09:00–15:00, Вс: выходной</small>
+																						<ul>
+																							<li><a href="tel:(423) 230-20-13">(423) 230-20-13</a></li>
+																							<li><a href="tel:(423) 224-44-30">(423) 224-44-30</a></li>
+																						</ul>
+																					</div>
+																				</div>
+																				<div class="col">
+																					@@include("includes-json/svg/icon-benefits-03.svg")
+																					<div class="col__title">Электронная почта</div>
+																					<div class="col__content">
+																						<ul>
+																							<li><a href="mailto:office@ema-dv.ru">office@ema-dv.ru</a></li>
+																						</ul>
+																					</div>
 																				</div>
 																			</div>
 																			<p>Приглашаем Вас посетить наш магазин-склад. Здесь есть все для комфортной покупки: удобный подъезд, грамотные консультанты и бесплатная парковка — если Вы наш Клиент, просто скажите об этом охраннику, и для Вас откроют шлагбаум и предоставят возможность удобно припарковаться.</p>
