--- a/src/_tpl_layout_foot.html
+++ b/src/_tpl_layout_foot.html
@@ -1,10 +1,10 @@
 <!-- >>> foot.tpl <<< -->
 <!--footer-->
 @@if(context.site === "dvemz") {
-	@@include('_layout_footer.tpl')
+	@@include('_tpl_layout_footer.html')
 }
 @@if(context.site === "ea") {
-	@@include('_layout_footer--ea.tpl')
+	@@include('_tpl_layout_footer--ea.html')
 }
 <!--footer end-->
 
