--- a/src/automatic-basket-02.html
+++ b/src/automatic-basket-02.html
@@ -3655,53 +3655,68 @@
 				<!--footer common-->
 				<div class="footer-common">
 					<div class="footer-common-holder">
-						<!--footer nav-->
-						<div class="footer-nav">
-							<div class="footer-nav__col">
-								<strong class="footer-nav__title"><a href="#"><span>О компании</span></a></strong>
+						<!--ea footer nav-->
+						<div class="ea-footer-nav">
+							<div class="ea-footer-nav__col">
+								<ul class="dl">
+									<li>
+										<div class="dt hide">Адрес:</div>
+										<div class="dd">ОАО ЭЛЕКТРОАВТОМАТИКА, г. Владивосток, ул. Молодежная, строение 1, корп. 3</div>
+									</li>
+								</ul>
 							</div>
-							<div class="footer-nav__col">
-								<strong class="footer-nav__title"><a href="#"><span>Производство</span></a></strong>
+							<div class="ea-footer-nav__col">
+								<ul class="dl">
+									<li>
+										<div class="dt">Тел:</div>
+										<div class="dd"><a href="tel:+7 (423) 230-21-37">+7 (423) 230-21-37</a></div>
+									</li>
+									<li>
+										<div class="dt">Факс:</div>
+										<div class="dd">(423) 254 48 86</div>
+									</li>
+									<li>
+										<div class="dt">Эл. почта:</div>
+										<div class="dd"><a href="mailto:info@dvemz.ru">info@ea.ru</a></div>
+									</li>
+								</ul>
 							</div>
-							<div class="footer-nav__col">
-								<strong class="footer-nav__title"><a href="#"><span>Монтажные работы</span></a></strong>
+							<div class="ea-footer-nav__col col-2">
+								<ul class="ea-footer-nav__list">
+									<li>
+										<strong class="ea-footer-nav__title"><a href="#"><span>О компании</span></a></strong>
+										<ul>
+											<li><a href="?1">item_1</a></li>
+											<li><a href="?2">item_2</a></li>
+											<li><a href="?3">item_3</a></li>
+											<li><a href="?4">item_4</a></li>
+											<li><a href="?5">item_5</a></li>
+										</ul>
+									</li>
+									<li>
+										<strong class="ea-footer-nav__title"><a href="#"><span>Производство</span></a></strong>
+									</li>
+									<li>
+										<strong class="ea-footer-nav__title"><a href="#"><span>Монтажные работы</span></a></strong>
+									</li>
+									<li>
+										<strong class="ea-footer-nav__title"><a href="#"><span>Сотрудничество</span></a></strong>
+									</li>
+									<li>
+										<strong class="ea-footer-nav__title"><a href="#"><span>Контакты</span></a></strong>
+									</li>
+								</ul>
 							</div>
-							<div class="footer-nav__col">
-								<strong class="footer-nav__title"><a href="#"><span>Сотрудничество</span></a></strong>
-							</div>
-							<div class="footer-nav__col">
-								<strong class="footer-nav__title"><a href="#"><span>Контакты</span></a></strong>
-							</div>
-							<div class="footer-nav__col footer-add-info">
-								<div class="footer-nav__item">
-									<ul class="dl">
-										<li>
-											<div class="dt hide">Адрес:</div>
-											<div class="dd">ОАО ЭЛЕКТРОАВТОМАТИКА, г. Владивосток, ул. Молодежная, строение 1, корп. 3</div>
-										</li>
-										<li>
-											<div class="dt">Тел:</div>
-											<div class="dd"><a href="tel:+7 (423) 230-21-37">+7 (423) 230-21-37</a></div>
-										</li>
-										<li>
-											<div class="dt">Факс:</div>
-											<div class="dd">(423) 254 48 86</div>
-										</li>
-										<li>
-											<div class="dt">Эл. почта:</div>
-											<div class="dd"><a href="mailto:info@dvemz.ru">info@ea.ru</a></div>
-										</li>
-									</ul>
-								</div>
-								<div class="footer-nav__item">
+							<div class="ea-footer-nav__col footer-add-info">
+								<div class="ea-footer-nav__item">
 									<span class="copyright">&copy; 2017 ОАО ЭЛЕКТРОАВТОМАТИКА</span>
 								</div>
-								<div class="footer-nav__item">
+								<div class="ea-footer-nav__item">
 									<strong class="dev">Дизайн сайта: <a href="http://astronim.by/">Astronim*Support</a></strong>
 								</div>
 							</div>
 						</div>
-						<!--footer nav end-->
+						<!--ea footer nav end-->
 					</div>
 				</div>
 				<!--footer common end-->
