--- a/src/automatic-products.html
+++ b/src/automatic-products.html
@@ -958,7 +958,7 @@
 														<ul class="p-filters-drop-list p-filters-group-js" data-filters-group="manufacturer">
 															<li>
 																<label class="check-label p-filters-label-js" data-filter-name="ru" data-filter-tag="Россия">
-						<input type="checkbox" name="ru" />
+						<input type="checkbox" name="ru" checked />
 						<i>&nbsp;</i>
 						<span class="p-filters-label-text-js">Российская Федерация</span>
 					</label>
@@ -1080,7 +1080,7 @@
 															</li>
 															<li>
 																<label class="check-label p-filters-label-js" data-filter-name="black">
-						<input type="checkbox" name="black" />
+						<input type="checkbox" name="black" checked="checked" />
 						<i>&nbsp;</i>
 						<span class="p-filters-label-text-js">Черный</span>
 					</label>
