--- a/src/automatic-news-inner.html
+++ b/src/automatic-news-inner.html
@@ -1244,7 +1244,7 @@
 							</a>
 						</div>
 						<div class="catalog-categories__item">
-							<a href="automatic-catalog.html" class="catalog-categories__cell">
+							<a href="#catalog-menu-item-09" class="catalog-categories__cell">
 								<div class="catalog-categories__figure">
 									<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 40 40" enable-background="new 0 0 40 40">
 								<g>
